force-app/main/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Is_Subsrciption__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field will get checked when ever a renewal opportunity is created from an order with subscription order line.</description>
        <label>Is Subscription?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Stage__c</fullName>
        <label>Lead Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAO</fullName>
                </value>
                <value>
                    <fullName>SGO</fullName>
                    <default>true</default>
                    <label>SGO</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Owner__c</fullName>
        <inlineHelpText>To be completed by the Legal team</inlineHelpText>
        <label>Legal Opportunity Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Emmy Hackett</fullName>
                </value>
                <value>
                    <fullName>Tyson Wilson</fullName>
                </value>
                <value>
                    <fullName>Paul Hudson</fullName>
                </value>
                <value>
                    <fullName>Rachel Short</fullName>
                </value>
                <value>
                    <fullName>Kanu Datha</fullName>
                </value>
                <value>
                    <fullName>Pippa Smith</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Likelihood__c</fullName>
        <label>Likelihood</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>70%</fullName>
                    <default>true</default>
                    <label>70%</label>
                </value>
                <value>
                    <fullName>90%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMS_Next_Step_Description__c</fullName>
        <label>MMS Next Step Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MMS_Next_Step_Due_Date__c</fullName>
        <label>MMS Next Step Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMS_Next__c</fullName>
        <label>MMS Next Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>01 Initial Presentation</fullName>
                </value>
                <value>
                    <fullName>02 Investigation</fullName>
                </value>
                <value>
                    <fullName>03 Justification</fullName>
                </value>
                <value>
                    <fullName>04 Very important presentation</fullName>
                </value>
                <value>
                    <fullName>05 Proposal</fullName>
                </value>
                <value>
                    <fullName>06 Budget</fullName>
                </value>
                <value>
                    <fullName>07 Close</fullName>
                </value>
                <value>
                    <fullName>Closed-Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MS_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field helps to Identify if the Opportunity is created by MS user</description>
        <label>MS Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MS_Value_Formula__c</fullName>
        <formula>Opportunity_MS_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MS Value Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_s_Notes__c</fullName>
        <label>Manager&apos;s Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Attribution__c</fullName>
        <label>Marketing Attribution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generated</fullName>
                </value>
                <value>
                    <fullName>Influenced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multi_YearDeal__c</fullName>
        <defaultValue>TEXT(1)</defaultValue>
        <description>Describes length of Contract signed</description>
        <label>Contract length (In Month)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>0 - 12</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>13 - 24</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>25 - 36</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>37 - 48</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>49 - 60</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NVM_Credit_Card_ID__c</fullName>
        <label>NVM Payment ID</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Step_Manager_Notes_Tracking__c</fullName>
        <label>Next Step/ Manager Notes Tracking</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NoOfProducts__c</fullName>
        <label>NoOfProducts</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Non_Standard_T_s_C_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Standard T&apos;s &amp; C&apos;s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offering__c</fullName>
        <description>This field has been created as a part of Nomenclature (SSE--113)</description>
        <inlineHelpText>Select the Offering(s) or Solution(s) that best define the product the client is buying.</inlineHelpText>
        <label>Offerings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cognitive (Verify, G+ etc)</fullName>
                </value>
                <value>
                    <fullName>Cognitive Interactive (Verify Interactive)</fullName>
                </value>
                <value>
                    <fullName>OPQ</fullName>
                </value>
                <value>
                    <fullName>APTA</fullName>
                </value>
                <value>
                    <fullName>MQ</fullName>
                </value>
                <value>
                    <fullName>PJM</fullName>
                </value>
                <value>
                    <fullName>Language</fullName>
                </value>
                <value>
                    <fullName>Skills: Technology</fullName>
                </value>
                <value>
                    <fullName>Skills: non-Technology</fullName>
                </value>
                <value>
                    <fullName>JFA Standard</fullName>
                </value>
                <value>
                    <fullName>JFA Custom</fullName>
                </value>
                <value>
                    <fullName>SJT Standard</fullName>
                </value>
                <value>
                    <fullName>SJT Custom</fullName>
                </value>
                <value>
                    <fullName>Remote WorkQ</fullName>
                </value>
                <value>
                    <fullName>Coding Simulation (Automata)</fullName>
                </value>
                <value>
                    <fullName>Contact Center Simulation</fullName>
                </value>
                <value>
                    <fullName>Simulation - Others</fullName>
                </value>
                <value>
                    <fullName>Smart Interview: On Demand (Async Video Interview, AutoView)</fullName>
                </value>
                <value>
                    <fullName>Smart Interview: Live (Smart Meet, Live Interview)</fullName>
                </value>
                <value>
                    <fullName>Smart Interview: Live Coding</fullName>
                </value>
                <value>
                    <fullName>SHL Experiences</fullName>
                </value>
                <value>
                    <fullName>Candidate Engagement Portal</fullName>
                </value>
                <value>
                    <fullName>In person Assessment Centre</fullName>
                </value>
                <value>
                    <fullName>In person Development Centre</fullName>
                </value>
                <value>
                    <fullName>Virtual Assessment Centre</fullName>
                </value>
                <value>
                    <fullName>Virtual Development Centre</fullName>
                </value>
                <value>
                    <fullName>HiPo</fullName>
                </value>
                <value>
                    <fullName>Leader Edge</fullName>
                </value>
                <value>
                    <fullName>360</fullName>
                </value>
                <value>
                    <fullName>Surveys</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OppUpdatedByOrderOn__c</fullName>
        <description>Created this field just to avoid unnecessary trigger fire because of allowClosed field update .
Doing so because Old Map and Old List in trigger is not updated when trigger is fired because of field update. This field can be deleted once there is a solution of this issue.</description>
        <label>OppUpdatedByOrderOn</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opp_Invoicing_Quality_Details__c</fullName>
        <label>Opp Invoicing Quality Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OpportunityAmountMappedWithLead__c</fullName>
        <description>As there is another standard field Amount exist on Opp but we can not map it with a custom field Opportunity Amount on lead during lead convert. So we are creating this custom filed only to map it with its correspondent on lead. This field will not be added on page layout.</description>
        <label>OpportunityAmountMappedWithLead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <displayFormat>Opp{00000}</displayFormat>
        <externalId>true</externalId>
        <label>Opportunity ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>OpportunityTypeMappedWithLead__c</fullName>
        <description>As there is another standard field Type exist on Opp but we can not map it with a custom field Opportunity Type on lead during lead convert. So we are creating this custom filed only to map it with its correspondent on lead. This field will not be added on page layout.</description>
        <label>OpportunityTypeMappedWithLead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Existing Business</fullName>
                </value>
                <value>
                    <fullName>New Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityType__c</fullName>
        <label>Estimated Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consultancy</fullName>
                </value>
                <value>
                    <fullName>In Company Training</fullName>
                </value>
                <value>
                    <fullName>MC Lettings</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Public Training</fullName>
                </value>
                <value>
                    <fullName>Existing Business – Growth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_Formula__c</fullName>
        <formula>Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Deal_Year__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Current Deal Year of Opportunity</description>
        <label>Opportunity Year</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_MS_Value__c</fullName>
        <description>This field is used on MS Pipeline Job Card</description>
        <label>Opportunity MS Value</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Is_MS_Product__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Nickname__c</fullName>
        <inlineHelpText>Free text field for user specific reporting</inlineHelpText>
        <label>Opportunity Nickname</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Submitted__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>to replace Opportunity Submitted By</description>
        <label>Opportunity Submitted</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Number (Legacy)</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <formula>IF(TEXT(Contract.Status) = &apos;Accepted&apos;,&apos;Client Accepted&apos;,TEXT(Contract.Status))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_activated_and_greater_than_zero__c</fullName>
        <defaultValue>&quot;False&quot;</defaultValue>
        <description>This field is a backend field that updates opportunity if the related order&apos;s status is changed to activated and it&apos;s order year is not equal to 0.</description>
        <label>Order is activated and year &gt; 0?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Variation / Renewal Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package_Level__c</fullName>
        <label>Package Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Plus</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Price__c</fullName>
        <inlineHelpText>Annual value of all recurring products from the original Opportunity</inlineHelpText>
        <label>Previous Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Record_Type__c</fullName>
        <label>Actual Record Type Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Increase_Percentage__c</fullName>
        <label>Price Increase Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price_Notification_Email_Bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price Notification Email Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Primary Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Products_Discount__c</fullName>
        <label>Contract Product Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposition_Detail__c</fullName>
        <label>Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call Centre/Customer Service</fullName>
                </value>
                <value>
                    <fullName>Clerical Skills</fullName>
                </value>
                <value>
                    <fullName>Essential [Business] Skills</fullName>
                </value>
                <value>
                    <fullName>Front Line Manager/Supervisors</fullName>
                </value>
                <value>
                    <fullName>IT Skills</fullName>
                </value>
                <value>
                    <fullName>Other (to cover generic/custom ones)</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>SHL Volume Recruitment Solution</fullName>
                </value>
                <value>
                    <fullName>Previsor Volume Recruitment Solution</fullName>
                </value>
                <value>
                    <fullName>Leadership</fullName>
                </value>
                <value>
                    <fullName>Business Transformation</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Senior Manager</fullName>
                </value>
                <value>
                    <fullName>Front Line Manager</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Graduate</fullName>
                </value>
                <value>
                    <fullName>Call Centre</fullName>
                </value>
                <value>
                    <fullName>Bank Teller</fullName>
                </value>
                <value>
                    <fullName>HiPo</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Leadership Audit</fullName>
                </value>
                <value>
                    <fullName>Leadership Readiness</fullName>
                </value>
                <value>
                    <fullName>Enterprise Leadership</fullName>
                </value>
                <value>
                    <fullName>Sales Audit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposition__c</fullName>
        <inlineHelpText>Select the closest use-case(s) that best defines client requirements.</inlineHelpText>
        <label>Use-case</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>TM_Phase__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Early Careers Hiring</fullName>
                </value>
                <value>
                    <fullName>Graduate Hiring</fullName>
                </value>
                <value>
                    <fullName>Volume Hiring</fullName>
                </value>
                <value>
                    <fullName>Apprentice Hiring</fullName>
                </value>
                <value>
                    <fullName>Technology Hiring</fullName>
                </value>
                <value>
                    <fullName>Sales Transformation Hiring</fullName>
                </value>
                <value>
                    <fullName>Managerial Hiring</fullName>
                </value>
                <value>
                    <fullName>Senior Leadership / Executive  Hiring</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Mobilize: Leadership &amp; Succession Planning</fullName>
                </value>
                <value>
                    <fullName>Mobilize: Potential</fullName>
                </value>
                <value>
                    <fullName>Sales Transformation Review</fullName>
                </value>
                <value>
                    <fullName>Review: Digital Readiness</fullName>
                </value>
                <value>
                    <fullName>Review: Remote Work</fullName>
                </value>
                <value>
                    <fullName>Review: Custom / Others</fullName>
                </value>
                <value>
                    <fullName>Develop Talent</fullName>
                </value>
                <value>
                    <fullName>TMReview</fullName>
                </value>
                <value>
                    <fullName>TMMobilise</fullName>
                </value>
                <value>
                    <fullName>Talent Management</fullName>
                </value>
                <value>
                    <fullName>Professional Hiring</fullName>
                </value>
                <value>
                    <fullName>HiPo</fullName>
                </value>
                <value>
                    <fullName>Enterprise Leadership</fullName>
                </value>
                <value>
                    <fullName>Succession Planning</fullName>
                </value>
                <value>
                    <fullName>Manager Development</fullName>
                </value>
                <value>
                    <fullName>Sales Transformation</fullName>
                </value>
                <value>
                    <fullName>Skills Development</fullName>
                </value>
                <value>
                    <fullName>Talent Mobility</fullName>
                </value>
                <value>
                    <fullName>Manager Development &amp; Sales Transformation &amp; HiPo</fullName>
                </value>
                <value>
                    <fullName>HiPo &amp; Succession Planning &amp; ELD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualified_for_Auto_Close__c</fullName>
        <description>This formula describes, which all records are ready to update &quot;Eligible for Auto Close&quot; field on Opp</description>
        <formula>AND(
    NOT(IsClosed),
    Can_be_Auto_renewed__c = TRUE,
    ISPICKVAL(Business_Type__c, &quot;Renewal&quot;),
    ISPICKVAL(Account.Status__c, &quot;Approved&quot;),
    Eligible_for_Auto_Close__c = FALSE,
    Renewal_Opportunity__c = TRUE,
    Opportunity_Deal_Year__c = 1,
    NOT(ISBLANK(Original_Opportunity__c)),
    ISPICKVAL(Actual_Record_Type_Name__c, &quot;Configurator Opportunity&quot;),
    ISBLANK(Rejected_Order_IDs__c),
    Total_Product_Count__c &gt; 0,
    ISBLANK(TEXT(CLM_Contract_Status__c)),
    NOT(ISBLANK(Renewal_Date__c)),
    Days_left_to_Close_Opp__c&gt; 31,
    Days_left_to_Close_Opp__c&lt; 365
)</formula>
        <label>Qualified for Auto Close?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RAG_Indicator_Amber__c</fullName>
        <description>Used to count Medium product on opportunity</description>
        <label>RAG Indicator Count Amber</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.RAG_Option_Value__c</field>
            <operation>equals</operation>
            <value>Medium</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RAG_Indicator_Green__c</fullName>
        <label>RAG Indicator Count Green</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.RAG_Option_Value__c</field>
            <operation>equals</operation>
            <value>Light</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RFP_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track if Opportunities have an RFP Status</description>
        <inlineHelpText>This field is managed by Client Solutions.</inlineHelpText>
        <label>RFP Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReasonforlostOpportunity__c</fullName>
        <label>Reason for lost Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Availability of SHL personnel</fullName>
                </value>
                <value>
                    <fullName>Bad credit</fullName>
                </value>
                <value>
                    <fullName>Client changed requirements</fullName>
                </value>
                <value>
                    <fullName>Client Terms unacceptable</fullName>
                </value>
                <value>
                    <fullName>Client went out of business</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Lack of acceptable data/benchmark</fullName>
                </value>
                <value>
                    <fullName>Lack of innovation/creativity</fullName>
                </value>
                <value>
                    <fullName>Opportunity gone</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>SHL could not match full requirements</fullName>
                </value>
                <value>
                    <fullName>SHL could not meet timescales</fullName>
                </value>
                <value>
                    <fullName>Terms &amp; Conditions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reasons_for_lost_Opportunity__c</fullName>
        <label>Reasons for Lost Opportunity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bad credit</fullName>
                </value>
                <value>
                    <fullName>Client changed requirements</fullName>
                </value>
                <value>
                    <fullName>Client terms unacceptable</fullName>
                </value>
                <value>
                    <fullName>Lack of acceptable data/benchmark</fullName>
                </value>
                <value>
                    <fullName>Lack of innovation/creativity</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>SHL cannot match requirements</fullName>
                </value>
                <value>
                    <fullName>SHL cannot meet timescales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recurring_Products_value__c</fullName>
        <inlineHelpText>Sum of all Recurring products that will form part of ARR and appear on the subsequent renewal Opportunity</inlineHelpText>
        <label>Recurring Products value</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.RenewableNew__c</field>
            <operation>equals</operation>
            <value>Ongoing</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rejected_Order_IDs__c</fullName>
        <label>Rejected Order IDs</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <inlineHelpText>This date is calculated from the Contract End Date + 1 day and signifies the true date that the next Renewal is due to start on.</inlineHelpText>
        <label>Renewal Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Notification_Sent_On__c</fullName>
        <inlineHelpText>This field shows the date/time of the renewal notification email sent to client.</inlineHelpText>
        <label>Renewal Notification Sent On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewal_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Created Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Running_total_of_non_subscription_amount__c</fullName>
        <label>Running total of non-subs amount(Legacy)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Running_total_of_subscription_amount__c</fullName>
        <label>Running total of subs amount (Legacy)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>